# rolodex

./: .pre-commit-config.yaml  README.md  awkward.ipynb  crsindex.ipynb  dask-index.ipynb  fmrc-index.ipynb  forecast_index.py  fvcom.ipynb  geoindex.ipynb  interval-array.ipynb  pyproject.toml  uxarray.ipynb  xgcmindex.ipynb
docs/: conf.py  forecast.ipynb  index.md
experiments/: S_20240101_concentration_v3.0.tif  awkward.ipynb  crsindex.ipynb  dask-index.ipynb  fmrc-index.ipynb  geoindex.ipynb  geoindex.py  interval-array.ipynb  raster_index.py  uxarray.ipynb  xgcmindex.ipynb
rolodex/: __init__.py
rolodex/forecast/: __init__.py  forecast_index.py
